<resources>
    <string name="app_name">魔法英语</string>
    <string name="exercise_enter">魔法学院</string>
    <string name="cn_label">中文：</string>
    <string name="en_label">英文：</string>
    <string name="next_game">下一关</string>
    <string name="open_prompt">显示英文</string>
    <string name="close_prompt">隐藏英文</string>
    <string name="success_str">胜利！</string>
    <string name="again_str">再来！</string>
    <string name="no_magic_str">没有魔法宝典</string>
    <string name="next_constitution_str">开启新章程</string>
    <string name="restart_game">重新开始</string>
    <string name="magic_fight">魔法战斗</string>
    <string name="monster_die_str">怪物死亡</string>
    <string name="game_over">游戏通关！</string>

    <string-array name="resource_id"><!-- 对一资源名 b_2_1 开始-->
        <item>b_1_1</item>
        <item>b_1_2</item>
        <item>b_1_3</item>
        <item>b_1_4</item>
        <item>b_1_5</item>
        <item>b_1_6</item>
        <item>b_2_1</item>
        <item>b_2_2</item>
        <item>b_2_3</item>
        <item>b_2_4</item>
    </string-array>
    <string-array name="branch_title">
        <item>在家中</item>
        <item>享受余暇时间</item>
        <item>生病、受伤时</item>
        <item>恋爱和结婚</item>
        <item>在工作单位</item>
        <item>电话</item>
        <item>日期和时间</item>
        <item>见面、分手时</item>
        <item>随意的谈话</item>
        <item>提醒、忠告</item>
        <item>内心表白</item>
    </string-array>

    <string-array name="b_1">
        <item>从起床到出门</item>
        <item>从回家到就寝</item>
        <item>休息日</item>
        <item>送礼物</item>
        <item>生活习惯</item>
        <item>理财</item>
    </string-array>
    <string-array name="b_2"><!-- 对一资源名 b_2_1 开始-->
        <item>邀请友人</item>
        <item>订计划</item>
        <item>出门的时候</item>
        <item>看电影</item>
        <item>去听音乐会</item>
        <item>打高尔夫球</item>
        <item>相识的人一起去喝酒</item>
        <item>唱卡拉OK</item>
    </string-array>
    <string-array name="b_3">
        <item>请医生看病</item>
        <item>陈述症状</item>
    </string-array>
    <string-array name="b_4">
        <item>喜欢、爱上…</item>
        <item>约会</item>
        <item>表白</item>
        <item>结婚</item>
        <item>离婚</item>
    </string-array>

</resources>
