<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical"
    tools:context="com.demo.administrator.mustardenglish.activity.ExerciseActivity">

    <RelativeLayout
        android:id="@+id/id_title_area_rl"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingRight="@dimen/dp_15"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_height="@dimen/dp_50">

        <ImageButton
            android:id="@+id/id_back_ib"
            android:background="@mipmap/arrow_left"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/dp_15"
            />

        <TextView
            android:id="@+id/id_title_tv"
            android:layout_width="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/white"
            android:text="wenj"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/id_number_current_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/SpringGreen"
                android:text="0"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/id_mid_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/DarkGray"
                android:text="/"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/id_number_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/red"
                android:text="1"
                android:gravity="center"
                />

        </LinearLayout>


    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/id_title_area_rl"
        android:layout_above="@+id/id_bottom_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/pale_blue_1"
                android:padding="@dimen/dp_15"
                >

                <TextView
                    android:id="@+id/id_cn_label"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/black"
                    android:text="@string/cn_label"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/id_cn_txt"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/sp_20"
                    android:textColor="@color/DarkGray"
                    android:text="@string/cn_label"
                    android:singleLine="false"
                    android:gravity="center"
                    android:background="@color/pale_blue"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="match_parent"
                    android:background="@color/gray"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    />
                <LinearLayout
                    android:id="@+id/id_en_area_ll"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/id_en_label"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/sp_12"
                        android:textColor="@color/black"
                        android:text="@string/en_label"
                        android:layout_marginBottom="@dimen/dp_5"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/id_en_txt"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/sp_20"
                        android:textColor="@color/red"
                        android:text="@string/en_label"
                        android:gravity="center"
                        android:singleLine="false"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:padding="@dimen/dp_15"
                >
                <TextView
                    android:id="@+id/id_show_input_txt"
                    android:layout_width="match_parent"
                    android:text=""
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_10"
                    android:background="@color/black"
                    android:singleLine="false"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:id="@+id/id_input_key_rl"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_width="match_parent"
                    android:background="@color/black"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_2"
                    android:layout_height="300dp">

                    <GridView
                        android:id="@+id/id_grid_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="4"
                        android:verticalSpacing="@dimen/dp_10"
                        android:horizontalSpacing="@dimen/dp_5"
                        />

                </RelativeLayout>



            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <RelativeLayout
        android:id="@+id/id_bottom_rl"
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:background="@color/light_gray"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/dp_50">
        <Button
            android:id="@+id/id_open_prompt"
            android:text="@string/open_prompt"
            android:textColor="@color/DarkGray"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/id_next"
            android:text="@string/next_game"
            android:textColor="@color/DarkGray"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/id_restart"
            android:text="@string/restart_game"
            android:textColor="@color/DarkGray"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
